2002-10-26 garlick
    * Fix bug where inappropriate match ($N) values caused a runtime assert.
    * Attempting to initiate a command to a device now short circuits
      exponential reconnect backoff.
    * Implemented --beacon, --flash, --unflash, --temp, and --node in client.
    * Fix bug where actions never make it to the head of the device queue
      to time out when the device is hung trying to login (e.g. 
      vpcd --hung_rpc).

2002-10-24 garlick
    * Changed magic vim comment at bottom of each file for tab expansion.
    * Tagged before-2nd-indent
    * Ran indent --no-tabs -kr *.[ch] on everything in src except 
      hostlist.[ch] and list.[ch] 
    * Tagged after-2nd-indent
    * Removed /etc/powerman/powerman.conf from RPM so powermand won't start
      unless it has been properly configured.

2002-10-22 garlick
    * Fixed bug where buf_readline() would occasionally assert on the 
      size of destination buffer on client read (gnat powerman/123)

2002-10-21 garlick
    * Added "devices" query to get mapping of devices to nodes and
      per-device statistics (reconnects, successful actions).
    * Renamed "TCP wrappers" to "tcpwrappers", added to etc/powerman.conf.
    * Fixed bug where tcp wrappers denial would kill powermand.
    * Tagged powerman-1-0-13

2002-10-21 grondo
    * hostlist.c : fixed bug where test matches testN

2002-10-20 garlick
    * Added temperature support for icebox.dev.
    * Added temperature and beacon support for icebox3.dev.

2002-10-19 garlick
    * Fixded bug in _update_timeout where usecs were not checked for zero
      when testing if timer is set.
    * Tagged powerman-1-0-12

2002-10-18 garlick
    * Added several new script types and factored code for building scripts
      in parse.y (now there is one function - makeScriptSec()).
    * Implemented "ping period N" directive in device scripts which
      enables PING_SCRIPT to run every N seconds.  This works around